# Generative-AI

./: .gitignore  pyproject.toml  requirements.txt  test_gemini.py
.kiro/specs/self-driving-car/: design.md  requirements.md  tasks.md
Chatmodel/: chat_hhistory.py  chatmodel_try.py  dynamic.py  gemini_test.py  openrouter_roboticslab.py
Chatmodel/LLM's/: chains.py  output_parsers.py  structured_output.py
LLM's/: llm_demo.py
RAG/: Complete_Rag.ipynb  Document.ipynb  Untitled-1.excalidraw  document_loaders.py  tavily_search.py
RAG/assets/: poem.txt
Streamlt/: main.py  pyproject.toml
tools/: basic_tool.py
